--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,28 @@
 {
   "hosting": {
     "public": "build",
+    "headers": [
+      { "source":"/service-worker.js", "headers": [{"key": "Cache-Control", "value": "max-age=31536000"}] },
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [ {
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        } ]
+      }, {
+        "source": "**/*.@(jpg|jpeg|gif|png|webp|svg|js|css)",
+        "headers": [ {
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        } ]
+      }, {
+        "source": "404.html",
+        "headers": [ {
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        } ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
