--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "school-project-react",
-  "version": "0.1.0",
+  "name": "Профиль ГБОУ СОШ 51",
+  "version": "1.0.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "gulp": "^4.0.2",
+    "gulp-image": "^6.3.1",
+    "gulp-webp": "^4.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "register-service-worker": "^1.7.1"
+    "register-service-worker": "^1.7.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
