--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,47 +3,166 @@
   "name": "Профиль ГБОУ СОШ 51",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "img/favicon-16x16.png",
+      "type": "image/png",
+      "sizes": "16x16"
     },
     {
-      "src": "logo192.png",
+      "src": "img/favicon-32x32.png",
+      "type": "image/png",
+      "sizes": "32x32"
+    },
+    {
+      "src": "img/icon-48x48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "img/icon-72x72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "img/icon-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "img/icon-128x128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
+      "src": "img/icon-144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "img/icon-152x152.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },
+    {
+      "src": "img/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "img/icon-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    },
+    {
+      "src": "img/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "logo512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
   "scope": "https://physical51.web.app/",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffffff",
+  "background-color": "#ffffff",
   "background_color": "#ffffff",
   "shortcuts": [
     {
       "name": "Расписание",
-      "short_name": "Расписание",
+      "description": "Расписание уроков и звонков",
       "url": "/schedule",
       "icons": [
         {
-          "src": "logo192.png",
+          "src": "img/favicon-16x16.png",
           "type": "image/png",
-          "sizes": "192x192"
+          "sizes": "16x16"
         },
         {
-          "src": "logo512.png",
+          "src": "img/favicon-32x32.png",
           "type": "image/png",
-          "sizes": "512x512"
+          "sizes": "32x32"
+        },
+        {
+          "src": "img/icon-48x48.png",
+          "type": "image/png",
+          "sizes": "48x48"
+        },
+        {
+          "src": "img/icon-72x72.png",
+          "type": "image/png",
+          "sizes": "72x72"
+        },
+        {
+          "src": "img/icon-96x96.png",
+          "type": "image/png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "ЕГЭ",
+      "description": "Полезные ссылки для ЕГЭ",
+      "url": "/ege",
+      "icons": [
+        {
+          "src": "img/favicon-16x16.png",
+          "type": "image/png",
+          "sizes": "16x16"
+        },
+        {
+          "src": "img/favicon-32x32.png",
+          "type": "image/png",
+          "sizes": "32x32"
+        },
+        {
+          "src": "img/icon-48x48.png",
+          "type": "image/png",
+          "sizes": "48x48"
+        },
+        {
+          "src": "img/icon-72x72.png",
+          "type": "image/png",
+          "sizes": "72x72"
+        },
+        {
+          "src": "img/icon-96x96.png",
+          "type": "image/png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Вузы",
+      "description": "Информация о ВУЗах",
+      "url": "/universities",
+      "icons": [
+        {
+          "src": "img/favicon-16x16.png",
+          "type": "image/png",
+          "sizes": "16x16"
+        },
+        {
+          "src": "img/favicon-32x32.png",
+          "type": "image/png",
+          "sizes": "32x32"
+        },
+        {
+          "src": "img/icon-48x48.png",
+          "type": "image/png",
+          "sizes": "48x48"
+        },
+        {
+          "src": "img/icon-72x72.png",
+          "type": "image/png",
+          "sizes": "72x72"
+        },
+        {
+          "src": "img/icon-96x96.png",
+          "type": "image/png",
+          "sizes": "96x96"
         }
       ]
     }
